# programming-techniques

./: .gitignore  .gitmodules  README.md
Design Pattern Technique/: CMakeLists.txt
Design Pattern Technique II/: CMakeLists.txt
Design Pattern Technique II/Design Pattern Technique II/: CMakeLists.txt  Design Pattern Technique II.cpp  Design Pattern Technique II.h  Multigen.hpp
Design Pattern Technique/Design Pattern Technique/: CMakeLists.txt  Design Pattern Technique.cpp  Design Pattern Technique.h  TextEditor.h
Hashing Technique/: Analyze_collisions.ipynb  Analyze_timings.ipynb  CMakeLists.txt  collisions.txt  timings.txt
Hashing Technique/Hashing Technique/: CMakeLists.txt  CampEntry.cpp  CampEntryHash.cpp  CampEntryHash.hpp  HashTable.hpp  Hashing Technique.cpp  Hashing Technique.h  MyHashes.hpp
RNG Technique/: Analyze.ipynb  CMakeLists.txt  output.txt  timings.txt
RNG Technique/RNG Technique/: CMakeLists.txt  ChiSquared.hpp  RNG Technique.cpp  RNG Technique.h  RandomFunctions.cpp  RandomFunctions.hpp
Search Technique/: Analyze.ipynb  CMakeLists.txt  timings.txt
Search Technique/Search Technique/: BinarySearch.hpp  BinarySearchTest.hpp  CMakeLists.txt  LinearSearch.hpp  LinearSearchTest.hpp  Search Technique.cpp  Search Technique.h  SearchTests.hpp  test_runner.hpp
Sorting Technique/: Analyze.ipynb  CMakeLists.txt  timings.txt
Sorting Technique/Sorting Technique/: CMakeLists.txt  CampEntry.cpp  CampEntry.hpp  Insertion Sort.hpp  Selection Sort.hpp  Shaker Sort.hpp  Sorting Technique.cpp  Sorting Technique.h
Sorting Technique/docs/html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_cache_8txt.html  _c_make_lists_8txt.html  _camp_entry_8cpp.html  _camp_entry_8cpp.js  _camp_entry_8hpp.html  _camp_entry_8hpp_source.html  _insertion_01_sort_8hpp.html  _insertion_01_sort_8hpp.js  _insertion_01_sort_8hpp_source.html  _selection_01_sort_8hpp.html  _selection_01_sort_8hpp.js  _selection_01_sort_8hpp_source.html  _shaker_01_sort_8hpp.html  _shaker_01_sort_8hpp.js  _shaker_01_sort_8hpp_source.html  _sorting_01_technique_8cpp.html  _sorting_01_technique_8cpp.js  _sorting_01_technique_8h.html  _sorting_01_technique_8h_source.html  _target_directories_8txt.html  _v_s_inherit_environments_8txt.html  annotated.html  annotated_dup.js  class_camp_entry-members.html  class_camp_entry.html  class_camp_entry.js  classes.html  dir_1c0accbeca367527549a0cc35105793a.html  dir_1c0accbeca367527549a0cc35105793a.js  dir_2926acf306484562c560ddf553c2d4de.html  dir_2926acf306484562c560ddf553c2d4de.js  dir_31642ee4e48afc7c76ad07db9af2dbda.html  dir_31642ee4e48afc7c76ad07db9af2dbda.js  dir_4e14aa2867ed79b63e66ee52a9f5fb56.html  dir_4e14aa2867ed79b63e66ee52a9f5fb56.js  dir_5f35df996269e919f25aa65b018e2348.html  dir_5f35df996269e919f25aa65b018e2348.js  dir_828715d34a2cbcff9c2c21e310a5c164.html  (+33 more)
Sorting Technique/docs/latex/: _c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  _c_make_cache_8txt.tex  _c_make_lists_8txt.tex  _camp_entry_8cpp.tex  _camp_entry_8hpp.tex  _insertion_01_sort_8hpp.tex  _selection_01_sort_8hpp.tex  _shaker_01_sort_8hpp.tex  _sorting_01_technique_8cpp.tex  _sorting_01_technique_8h.tex  _target_directories_8txt.tex  _v_s_inherit_environments_8txt.tex  annotated.tex  class_camp_entry.tex  dir_1c0accbeca367527549a0cc35105793a.tex  dir_2926acf306484562c560ddf553c2d4de.tex  dir_31642ee4e48afc7c76ad07db9af2dbda.tex  dir_4e14aa2867ed79b63e66ee52a9f5fb56.tex  dir_5f35df996269e919f25aa65b018e2348.tex  dir_828715d34a2cbcff9c2c21e310a5c164.tex  dir_8a986dc5ee32d07821c5eba598d7be72.tex  dir_99c4eb5ddc00a999b0130257c161def7.tex  dir_d46634f9ce6a6b89d6b58701540a38a7.tex  files.tex  foo_8h.tex  main_8c.tex  namespacecustom.tex  namespaces.tex  refman.aux  refman.tex  struct_camp_entry_1_1_bday.tex
Sorting Technique/docs/rtf/: dir_1c0accbeca367527549a0cc35105793a.rtf  dir_2926acf306484562c560ddf553c2d4de.rtf  dir_31642ee4e48afc7c76ad07db9af2dbda.rtf  dir_4e14aa2867ed79b63e66ee52a9f5fb56.rtf  dir_5f35df996269e919f25aa65b018e2348.rtf  dir_828715d34a2cbcff9c2c21e310a5c164.rtf  dir_8a986dc5ee32d07821c5eba598d7be72.rtf  dir_99c4eb5ddc00a999b0130257c161def7.rtf  refman.rtf  (+1 more)
Sorting Techniques/: Sorting Techniques.sln
Sorting Techniques/Debug/: Sorting Techniques.ilk
Sorting Techniques/Sorting Techniques/: Sorting Techniques.cpp  Sorting Techniques.vcxproj  Sorting Techniques.vcxproj.filters
(+59 files in other folders)
