# CMakeList.txt : CMake project for Design Pattern Technique II, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeTarget "Design Pattern Technique II.cpp" "Design Pattern Technique II.h")

# TODO: Add tests and install targets if needed.
