# CMakeList.txt : CMake project for Design Pattern Technique, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeTarget "Design Pattern Technique.cpp" "Design Pattern Technique.h")

# TODO: Add tests and install targets if needed.
