# CMakeList.txt : CMake project for Search Technique, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeTarget "Search Technique.cpp" "Search Technique.h")

# TODO: Add tests and install targets if needed.
